force-app/testRecordGenerator/objects/Test_Record_Generator_Field__mdt/Test_Record_Generator_Field__mdt.object-meta.xml
<CustomObject>
    <description>A field configuration to go with a Test_Record_Generator_mdt record</description>
    <label>Test Record Generator Field</label>
    <pluralLabel>Test Record Generator Fields</pluralLabel>
</CustomObject>