force-app/testRecordGenerator/objects/Test_Record_Generator_Field__mdt/fields/Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class__c</fullName>
    <description>A class implementing TestFieldFunction to make supply a value for this field</description>
    <inlineHelpText>A class implementing TestFieldFunction to make supply a value for this field</inlineHelpText>
    <label>Apex Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>